# bi-kanpe

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  kanpe_app_spec.md
.claude/: settings.local.json
.github/workflows/: pre-release.yml  release.yml  test-build.yml
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: app_config.rs  config.rs  lib.rs  main.rs  state.rs  templates.rs
app/src-tauri/src/commands/: app_commands.rs  client_commands.rs  config_commands.rs  mod.rs  server_commands.rs  streamdeck_commands.rs  template_commands.rs
app/src/components/: ClientView.tsx  ConfirmDialog.tsx  DonationDialog.tsx  ModeSelector.tsx  MonitorPopout.tsx  ServerView.tsx  TemplateManager.tsx  ThemeToggle.tsx  Toast.tsx
app/src/contexts/: ThemeContext.tsx  ToastContext.tsx
app/src/hooks/: useAppConfig.ts  useAppVersion.ts  useClientState.ts  useServerState.ts  useTemplates.ts  useTimerRemainingMs.ts
app/src/types/: messages.ts
crates/kanpe-client/: Cargo.toml
crates/kanpe-client/src/: client.rs  lib.rs
crates/kanpe-core/: Cargo.toml
crates/kanpe-core/src/: lib.rs  message.rs  types.rs
crates/kanpe-server/: Cargo.toml
crates/kanpe-server/src/: broadcast.rs  client_manager.rs  lib.rs  monitor_manager.rs  server.rs  timer_manager.rs
crates/kanpe-server/web-caster/: app.js  index.html  styles.css
crates/kanpe-streamdeck-server/: Cargo.toml
crates/kanpe-streamdeck-server/src/: lib.rs  protocol.rs  server.rs
streamdeck-plugin/: .gitignore  README.md  package-lock.json  package.json  rollup.config.mjs
streamdeck-plugin/com.bi-kanpe.streamdeck.sdPlugin/: manifest.json
streamdeck-plugin/com.bi-kanpe.streamdeck.sdPlugin/imgs/: README.md
streamdeck-plugin/com.bi-kanpe.streamdeck.sdPlugin/ui/: react-to-latest.html  sdpi.css  send-feedback.html
streamdeck-plugin/com.misei.bi-kanpe.sdPlugin/: manifest.json
streamdeck-plugin/com.misei.bi-kanpe.sdPlugin/ui/: react-to-latest.html  send-feedback.html
streamdeck-plugin/src/: plugin.ts  ws-client.ts
streamdeck-plugin/src/actions/: react-to-latest.ts  send-feedback.ts
