[workspace]
members = [
    "app/src-tauri",
    "crates/kanpe-core",
    "crates/kanpe-server",
    "crates/kanpe-client",
    "crates/kanpe-streamdeck-server",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
anyhow = "1.0"
thiserror = "2.0"

# Workspace crates
kanpe-core = { path = "crates/kanpe-core" }
kanpe-server = { path = "crates/kanpe-server" }
kanpe-client = { path = "crates/kanpe-client" }
kanpe-streamdeck-server = { path = "crates/kanpe-streamdeck-server" }