[package]
name = "kanpe-server"
version = "0.1.0"
edition = "2021"

[dependencies]
kanpe-core = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
